--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - checkout
       - run:
+          command: gem install bundler
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
